<resources>
    <string name="app_name">Petted</string>
    <string name="facebook_app_id">1654333841481673</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mascotas">Mis Mascotas</string>
    <string name="btn_iniciar">Iniciar</string>
    <string name="nombre">Nombre</string>
    <string name="tipo">Tipo</string>
    <string name="raza">Raza</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mascota">Mascota</string>
    <string name="titulo_informacion">Información</string>
    <string name="titulo_citas">Citas</string>
    <string name="titulo_medicamentos">Medicamentos</string>
    <string name="titulo_vacunas">Vacunas</string>
    <string name="action_notificaciones">Activar/Desactivar Notificaciones</string>
    <string name="action_editar">Editar Mascota</string>
    <string name="action_eliminar">Eliminar Mascota</string>
    <string name="title_activity_mascota_nueva">Mascota Nueva</string>
    <string name="btn_agregar_mascota">Añadir Mascota</string>

    <style name="etSeleccionarFechaNacimiento">Seleccionar la fecha de nacimiento</style>

    <string-array name="TiposDeMascotas">
        <item>Perro</item>
        <item>Gato</item>
        <item>Ave</item>
        <item>Reptil</item>
        <item>Otro</item>
    </string-array>
    <string-array name="RazasDeGatos">
        <item>Angora Turco</item>
        <item>Azul Ruso</item>
        <item>Bosque de Noruega</item>
        <item>Europeo de pelo corto</item>
        <item>Maine Coon</item>
        <item>Persa</item>
        <item>Peterbald</item>
        <item>Scottish Fold</item>
        <item>Siamés</item>
        <item>Sphynx</item>
        <item>Otro</item>
    </string-array>
    <string-array name="RazasDePerros">
        <item>Labrador</item>
        <item>Chihuahua</item>
        <item>Dálmata</item>
        <item>Golden Retriever</item>
        <item>Boxer</item>
        <item>Border Collie</item>
        <item>Schnauzer</item>
        <item>Cocker Spaniel</item>
        <item>Collie</item>
        <item>Beagle</item>
        <item>Otro</item>
    </string-array>
    <string-array name="RazasDeAves">
        <item>Periquito</item>
        <item>Diamante Mandarin</item>
        <item>Diamante Gould</item>
        <item>Canario</item>
        <item>Jilguero</item>
        <item>Agaporni</item>
        <item>Forpus</item>
        <item>Ninfa</item>
        <item>Kakarikis</item>
        <item>Cacatua</item>
        <item>Otro</item>
    </string-array>
    <string-array name="RazasDeReptiles">
        <item>Iguana</item>
        <item>Gecko</item>
        <item>Camaleón</item>
        <item>Otro</item>
    </string-array>
    <string-array name="RazasOtro">
        <item>Otro</item>
    </string-array>
    <string-array name="Generos">
        <item>Hembra</item>
        <item>Macho</item>
    </string-array>

    <string-array name="TiposDeCitas">
        <item>Veterinaria</item>
        <item>Peluquería</item>
        <item>Vacunación</item>
        <item>Otra</item>
    </string-array>

    <string-array name="TiposDeViaDeSuministroMedicamento">
        <item>Oral</item>
        <item>Cutánea</item>
        <item>Inhalatoria</item>
        <item>Intravenosa</item>
        <item>Otra</item>
    </string-array>

    <string name="title_activity_asociar_tag_nfc">Asociar Tag NFC</string>
    <string name="title_activity_creacion_usuario">Crear Usuario</string>
    <string name="hintNombreUsuario">Nombre de usuario</string>
    <string name="hintCorreoElectronico">Correo electronico</string>
    <string name="hintContraseña">Contraseña</string>
    <string name="hintRepitaContraseña">Repita la contraseña</string>
    <string name="crear">Crear</string>
    <string name="errorUsuarioNoExiste">Error, correo no registrado.</string>
    <string name="errorContraseña">Error, contraseña incorrecta.</string>
    <string name="action_save">Guardar</string>
    <string name="cliente_label">Cliente</string>
    <string name="producto_label">Producto</string>
    <string name="fecha_label">Fecha</string>
    <string name="prioridad_label">Prioridad</string>
    <string name="notas_label">Notas</string>
    <string name="notas_hint">Notas hint</string>
    <string name="action_guardar">Guardar</string>
    <string name="title_activity_vacuna_formulario">Formulario Vacuna</string>
    <string name="no_ha_nacido">No ha nacido</string>
    <string name="un_mes">1 mes</string>
    <string name="_meses">" meses"</string>
    <string name="un_año">1 año</string>
    <string name="_años">" años"</string>
    <string name="no_nfc">No tiene NFC</string>
    <string name="no_funcionalidad_nfc">Esta funcionalidad está disponible solo para dispositivos con NFC.</string>
    <string name="presione_mas_sin_mascotas">Presione el botón \'+\' para agregar mascotas.</string>
    <string name="presione_mas_sin_citas">Presione el botón \'+\' para agregar citas.</string>
    <string name="presione_mas_sin_vacunas">Presione el botón \'+\' para agregar vacunas.</string>
    <string name="presione_mas_sin_medicamentos">Presione el botón \'+\' para agregar medicamentos.</string>
</resources>
