<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.pi.sjm.petted.vista.usuario.CreacionUsuarioActivity">

    <EditText
        android:id="@+id/etNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:hint="@string/hintNombreUsuario"
        android:inputType="text" />

    <EditText
        android:id="@+id/etCorreoElectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etNombreUsuario"
        android:layout_marginTop="24dp"
        android:hint="@string/hintCorreoElectronico"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etCorreoElectronico"
        android:layout_marginTop="24dp"
        android:hint="@string/hintContraseña"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etContraseñaRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etContraseña"
        android:layout_marginTop="24dp"
        android:hint="@string/hintRepitaContraseña"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCrearUsuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etContraseñaRep"
        android:layout_marginTop="83dp"
        android:background="@color/ColorPrimary"
        android:onClick="onClickCrearUsuario"
        android:padding="12dp"
        android:text="@string/crear"
        android:textColor="@color/blanco" />

</RelativeLayout>
